src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_SettingDPonNonDO.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
<cc:Custom_Clr cc:MyClass.MyTransparency="1.0"
 xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted"
  />
</Page>
